--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ flask = "==1.1.2"
 jinja2 = "==2.11.2"
 python-dotenv = "*"
 flask-sqlalchemy = "*"
+flask-wtf = "*"
+flask-bcrypt = "*"
+flask-login = "*"
+email-validator = "*"
 
 [requires]
 python_version = "3.9"
